@@ -1,3 +1,7 @@
+2000-01-19  Lauris Kaplinski <lauris@ariman.ee>
+
+    * src/helper/sodipodi-ctrl.*: removed aa rendering
+
 2000-01-18 David Metcalfe (crdjm@sgi.com)
 
     * Added command line options:
